# CLI-PIRATES

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
legacy/: batalha_navalX-0-3.py
pirates/: __init__.py  constants.py  game.py  saves.py
pirates/ai/: __init__.py  enemy.py
pirates/core/: __init__.py  combat.py  frota.py  movimento.py  notoriedade.py  porao.py  ship.py  simulation.py  state.py  utils.py  velas.py  vento.py
pirates/input/: __init__.py  commands.py  hotkeys.py
pirates/port/: __init__.py  lojas.py  scene.py
pirates/ui/: __init__.py  colors.py  hud.py  inventario.py  menus.py  renderer.py
pirates/world/: __init__.py  entities.py  simulation.py  state.py
tests/: __init__.py  test_combat.py  test_deriva.py  test_deriva_traves.py  test_economia.py  test_enemy_ai.py  test_enemy_ai_vento.py  test_frota.py  test_hud.py  test_hud_mapa_mundo.py  test_hud_velas.py  test_lojas.py  test_lojas_vela.py  test_notoriedade.py  test_porao.py  test_saves.py  test_ship.py  test_ship_movimento.py  test_utils.py  test_velas.py  test_vento.py  test_world_simulation.py  test_world_state.py
